[tool.poetry]
name = "autorecon"
version = "2.0.19"
description = "A multi-threaded network reconnaissance tool which performs automated enumeration of services."
authors = ["Tib3rius"]
license = "GNU GPL v3"
exclude = ["autorecon.py"]
packages = [
	{ include = "autorecon" },
]

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4.4"
colorama = "^0.4.4"
toml = "^0.10.2"
Unidecode = "^1.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
autorecon = "autorecon.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
