[tool.poetry]
name = "autorecon"
version = "2.0.30"
description = "A multi-threaded network reconnaissance tool which performs automated enumeration of services."
authors = ["Tib3rius"]
license = "GNU GPL v3"
exclude = ["autorecon.py"]
packages = [
	{ include = "autorecon" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
appdirs = "^1.4.4"
colorama = "^0.4.5"
impacket = "^0.10.0"
requests = "^2.28.1"
toml = "^0.10.2"
Unidecode = "^1.3.1"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
bandit = "^1.7.4"
codespell = "^2.2.2"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
mytest = "^1.65535.0"
pyupgrade = "^3.3.1"
safety = "^2.3.5"
flake8-bugbear = "^22.12.6"
flake8-comprehensions = "^3.10.1"

[tool.poetry.scripts]
autorecon = "autorecon.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
